--- a/desktop.css
+++ b/desktop.css
@@ -5,8 +5,8 @@
 }
 body{
     font-family: helvetica;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 12px;
+    /* line-height: 1px; */
     color: #333;
 }
 .ancho{
@@ -41,23 +41,52 @@ header{
         color: white;
 }
 
-
-.banner {
-    width: 100%;
+.contenedor1 { 
     height: 500px;
     background-position: 38%;
     background-size: cover;
     background-image: url(imagenes/home-01.jpg);
     color: white;
     
+  
+}
+.bannercontenedor{
+    width: 66%;
+    text-align: left;
+    margin: 60px;
+    padding-bottom: 20px;
+}
+.banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+   
+}
+.banner h1{
+    display: inline-block;
+    font-weight: 500;
+    font-size: 60px;
+    margin: 30px;
+    margin-bottom: 0;
+}
+.banner h3{
+    font-size: 24px;
+    margin: 30px;
 }
 
-
 .btn-uno{
+    font-size: 20px;
     width: 200px;
-    height: 200px;
+    height: 50px;
     text-decoration: none;
     padding: 10px 30px;
-    margin: 10px;
-    border: 1px	black solid;
+    margin: 30px;
+    color: #fff;
+    background-color: #1e7fdd;
+    border-color: #1e7fdd;
+    border-radius: 4px;
+    text-align: center;
+    
 }
