--- a/desktop.css
+++ b/desktop.css
@@ -1,13 +1,30 @@
+:root {
+    --encabezados: #1E7FDD;;
+    --resltador: #dd951e;
+    --letras: #0D365D;
+    --icons:#63a4e3; 
+    --pie: #0d365d;
+  }
+  
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
+}
+.ir-arriba{
+position: fixed;
+z-index: 10;
+right: 20px;
+bottom: 20px;
+font-size: 40px;
+filter: drop-shadow(0px 0px 5px #999);
+color: rgb(180, 16, 16);
+cursor: pointer;
 }
 body{
-    font-family: helvetica;
-    font-size: 12px;
-    /* line-height: 1px; */
-    color: #333;
+   
+    font-family: "Roboto", sans-serif;
 }
 .ancho{
 max-width: 1200px;
@@ -21,6 +38,9 @@ header{
     justify-content: space-between;
     align-items: center;
     
+}
+.index  .contacto .sector{
+    display: none;
 }
 .contenedormenu{
     width: 100%;
@@ -89,4 +109,97 @@ header{
     border-radius: 4px;
     text-align: center;
     
+}
+
+.contenedor2{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+.welcome{
+    color: #0D365D;
+    font-size: 60px;
+    padding: 20px;
+}
+
+.contenedorinfo{
+    display: flex;
+    flex-direction: row;
+    padding: 0px 20px;
+    flex-wrap: wrap;
+    border: 1px	green solid;
+
+}
+
+.info1{
+    max-width: 550px;
+    object-fit: cover;
+    border: 1px	blue solid;
+    padding: 42px 15px;
+    
+}
+
+.info1 img{
+    width: 100%;
+}
+
+.info1 h3 {
+    /* font-weight: 500; */
+    font-size: 30px;
+    padding: 20px 0px;
+
+}
+
+.info1 p{
+    display: block;
+    font-size: 18px;
+    margin: 30px 0px 12.5px;
+    margin-top: 30px;
+    color: #393b3d;
+
+}
+
+.pie{
+    background-color: var(--pie);
+}
+.pie{
+    display:  flex;
+    flex-direction: column;
+}
+
+.fotopie{
+    max-width: 400px;
+    border: 1px	green solid;
+}
+
+.fotopie img{
+    max-width: 100%;
+}
+.list-inline{
+    display: flex;
+
+}
+.copyright{
+
+    font-size: 14px;
+    line-height: 30px;
+    color: #1e7fdd;
+    margin-bottom: 0;
+}
+.redes{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+
+}
+.redes i{
+    color: var(--icons) ;
+    font-size: 50px;
+
+    padding: 30px;
+
+
 }
